<?xml version="1.0"?>
<package>
  <name>mobile_robot</name>
  <version>0.0.1</version>
  <description>Package providing tools for mobile robots e.g. for kinematics calculation, ackermann steering calculation, etc.</description>

  <maintainer email="jakub@tomasek.fr">Jakub Tomasek</maintainer>
  <author email="jakub@tomasek.fr">Jakub Tomasek</author>


  <license>MIT</license>



  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>  
  
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>  



</package>